# JDLewisAI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: fonts.ts  (+4 more)
takeoff-engine/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
takeoff-engine/app/: config.py  main.py
takeoff-engine/app/adapters/: base.py  detector_gdino.py  detector_mock.py  detector_rfdetr.py  ocr_got.py  ocr_mock.py  ocr_paddle.py  rollup_llm.py  rollup_mock.py  segmenter_mock.py  segmenter_sam2.py  transport.py  vlm_mock.py  vlm_qwen.py
takeoff-engine/app/api/: calibration.py  exports.py  pipeline.py  projects.py  quantities.py  review.py  sheets.py
takeoff-engine/app/db/: database.py  orm.py
takeoff-engine/app/export/: audit.py  csv_export.py  disclaimer.py  excel.py  json_export.py
takeoff-engine/app/geometry/: engine.py  exclusions.py  linework.py  raster.py  units.py  walls.py
takeoff-engine/app/ingestion/: coordinates.py  pdf_pdfium.py  pdf_pymupdf.py  tiff.py
takeoff-engine/docs/: adapters.md  architecture.md  evaluation.md  fine-tuning-roadmap.md
takeoff-engine/tests/: conftest.py  test_adapters.py  test_concrete.py  test_confidence.py  test_database.py  test_exports.py  test_geometry.py  test_linework.py  test_model_assisted_geometry.py  test_pipeline_mock.py  test_review_api.py  test_scale_parsing.py  test_schemas.py  test_scoped_takeoff.py  test_takeofftest1_regression.py  test_testmain_regression.py  test_units.py
takeoff-engine/training/: README.md  export_corrections_to_coco.py  finetune_rfdetr.py  finetune_segmentation.py  requirements-train.txt  train_sheet_classifier.py
(+406 files in other folders)
